# poles_detection_with_pcl

./: README.md  READMe
ROSBOT/husarion_gz_worlds/worlds/: xyz.sdf
ROSBOT/rosbot_xl_description/urdf/: rosbot_xl.urdf.xacro
ROSBOT/rosbot_xl_gazebo/launch/: simulation.launch.py  simulation_poles.launch.py
find_poles_pkg/: CMakeLists.txt  package.xml
find_poles_pkg/src/: find_poles.cpp  poles_midpoint.cpp
robot_navigation/: CMakeLists.txt  package.xml
robot_navigation/config/: navigation.yaml
robot_navigation/launch/: amcl.launch.py  navigation.launch.py  slam.launch.py
robot_navigation/maps/: map.pgm  map.yaml
robot_navigation/rviz/: nav2.rviz  slam.rviz
robot_navigation/src/: object_detection_node (copy).cpp  object_detection_node.cpp
